# why

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  helloworld.why  why.c
examples/: cf-4A.why  cflow.why  counter.why  exp.why  helloworld.why  nest.why  prime.why  subroutine.why  truth-machine.why
include/: stacks.h
src/: betest.c  main.c  why.c
